fix: textView space

--- a/Workouts/Workouts/Base.lproj/Main.storyboard
+++ b/Workouts/Workouts/Base.lproj/Main.storyboard
@@ -240,7 +240,7 @@
                                     </button>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstAttribute="bottom" secondItem="9xm-If-HJ4" secondAttribute="bottom" constant="148" id="1Ao-FS-2yP"/>
+                                    <constraint firstAttribute="bottom" secondItem="9xm-If-HJ4" secondAttribute="bottom" constant="200" id="1Ao-FS-2yP"/>
                                     <constraint firstItem="bTo-tC-UfW" firstAttribute="top" secondItem="f6A-GA-lBR" secondAttribute="bottom" constant="20" id="2tm-Qe-aR9"/>
                                     <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="Fkv-YV-QpJ" secondAttribute="trailing" constant="20" symbolic="YES" id="4zC-Tm-4la"/>
                                     <constraint firstItem="Of9-Kc-1FB" firstAttribute="trailing" secondItem="bTo-tC-UfW" secondAttribute="trailing" id="5Jh-K3-dlu"/>
@@ -251,7 +251,7 @@
                                     <constraint firstItem="UNl-qa-ObY" firstAttribute="leading" secondItem="0vw-MS-i1g" secondAttribute="leading" constant="20" id="E5m-nj-ddz"/>
                                     <constraint firstItem="Of9-Kc-1FB" firstAttribute="leading" secondItem="0vw-MS-i1g" secondAttribute="leading" constant="40" id="HUK-el-es1"/>
                                     <constraint firstItem="rvF-DG-usP" firstAttribute="leading" secondItem="0vw-MS-i1g" secondAttribute="leading" constant="20" id="HwJ-sT-TTm"/>
-                                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="Of9-Kc-1FB" secondAttribute="trailing" symbolic="YES" id="K2B-gd-w4L"/>
+                                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="Of9-Kc-1FB" secondAttribute="trailing" constant="20" symbolic="YES" id="K2B-gd-w4L"/>
                                     <constraint firstItem="l4H-gL-3Sv" firstAttribute="leading" secondItem="0vw-MS-i1g" secondAttribute="leading" constant="20" id="LOp-eH-Ty7"/>
                                     <constraint firstItem="Fkv-YV-QpJ" firstAttribute="top" secondItem="bTo-tC-UfW" secondAttribute="bottom" constant="30" id="McT-F7-thK"/>
                                     <constraint firstItem="f6A-GA-lBR" firstAttribute="top" secondItem="0vw-MS-i1g" secondAttribute="top" constant="20" id="NCU-4K-TJw"/>
