--- a/Workouts/Workouts/View/Cells/TargetAreaCell/TargetAreaCollectionViewCell.xib
+++ b/Workouts/Workouts/View/Cells/TargetAreaCell/TargetAreaCollectionViewCell.xib
@@ -10,14 +10,14 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="TargetAreaCollectionViewCell" id="gTV-IL-0wX" customClass="TargetAreaCollectionViewCell" customModule="Workouts" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="123" height="50"/>
+            <rect key="frame" x="0.0" y="0.0" width="123" height="49"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="123" height="50"/>
+                <rect key="frame" x="0.0" y="0.0" width="123" height="49"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PQF-7u-sPr">
-                        <rect key="frame" x="8" y="15" width="107" height="21"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PQF-7u-sPr">
+                        <rect key="frame" x="8" y="15" width="107" height="20"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
