--- a/ImageCollection/ImageCollection/Base.lproj/Main.storyboard
+++ b/ImageCollection/ImageCollection/Base.lproj/Main.storyboard
@@ -25,7 +25,7 @@
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
-                                <activityIndicatorView key="backgroundView" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="large" id="w9a-rq-GXJ">
+                                <activityIndicatorView key="backgroundView" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="large" id="w9a-rq-GXJ">
                                     <rect key="frame" x="0.0" y="0.0" width="374" height="734"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 </activityIndicatorView>
@@ -42,7 +42,11 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="i94-F3-jZg">
-                        <barButtonItem key="rightBarButtonItem" title="Item" image="gobackward" catalog="system" id="N8T-hQ-CFz"/>
+                        <barButtonItem key="rightBarButtonItem" title="Item" image="gobackward" catalog="system" id="N8T-hQ-CFz">
+                            <connections>
+                                <action selector="reloadImages:" destination="BYZ-38-t0r" id="7PA-sf-GwN"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                     <connections>
                         <outlet property="activityIndicator" destination="w9a-rq-GXJ" id="nD0-Fb-atT"/>
